environment/workspace/manifests/servicemesh/20-traffic-management/50-identity-based-routing/ui-virtual-service-safari-recommendation-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - ui-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Safari.*
    route:
    - destination:
        host: ui
        subset: v2
  - route:
    - destination:
        host: ui
        subset: v1
---
